--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -19,7 +19,8 @@
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href="{% url 'newpage' %}">Create New Page</a>
+                    <a href="{% url 'create' %}">Create New List (Tim)</a>
                 </div>
                 <div>
                     Random Page
