--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -19,8 +19,7 @@
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    <a href="{% url 'newpage' %}">Create New Page</a>
-                    <a href="{% url 'create' %}">Create New List (Tim)</a>
+                    Create New Page
                 </div>
                 <div>
                     Random Page
