overly verbose doesn't help

--- a/encyclopedia/templates/encyclopedia/nonExistingEntry.html
+++ b/encyclopedia/templates/encyclopedia/nonExistingEntry.html
@@ -3,6 +3,7 @@
     {{ entryTitle }}?
 {% endblock %}
 <h2> Looks new to me...</h2>
-It looks like your entry doesn't exist... yet!
-
-Click <a href="newEntry.html">here</a> to create your entry, making our wiki bigger and better :D
+<p>
+It looks like your entry doesn't exist... yet!</p>
+<p>
+Click <a href="newEntry.html">here</a> to create your entry, making our wiki bigger and better :D</p>
