--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+    <h1> {{ entryTitle }} </h1>
     <a class="btn btn-outline-secondary" href="/wiki/{{ entryTitle }}/edit" role="button">Edit</a>
     {{ entry|safe }}
 {% endblock %}
