--- a/encyclopedia/templates/encyclopedia/404.html
+++ b/encyclopedia/templates/encyclopedia/404.html
@@ -1,9 +1,13 @@
 {% extends "encyclopedia/layout.html" %}
+
 {% block title %}
     {{ entryTitle }}?
 {% endblock %}
+
+{% block body %}
 <h2> Looks new to me...</h2>
 <p>
 It looks like your entry doesn't exist... yet!</p>
 <p>
-Click <a href="newEntry.html">here</a> to create your entry, making our wiki bigger and better :D</p>
+Click <a href="{% url 'newEntry' %}">here</a> to create your entry, making our wiki bigger and better :D</p>
+{% endblock %}
