--- a/encyclopedia/templates/encyclopedia/newEntry.html
+++ b/encyclopedia/templates/encyclopedia/newEntry.html
@@ -9,7 +9,10 @@
     <form action="{% url 'newEntry' %}" method="post">
         {% csrf_token %}
         {{ form }}
-        {{ entry|safe }}        
+        <!- If entry exists show error, otherwise go to entry-!>
+        {% if entry %}
+            We already have that entry
+        {% endif %}
         <input type="submit">
     </form>
 {% endblock %}
